k8s/app-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: restapi-srv
  namespace: restapi
  labels:
    app.kubernetes.io/managed-by: "gcp-cloud-build-deploy"
spec:
  selector:
    app: restapi-app
  ports:
  - port: 80
    targetPort: 3000
  type: "LoadBalancer"
