k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: restapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "myapp.local.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restapi-srv
            port:
              number: 80
  - host: "frontend.local.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: suwaddy-frontend-svc
            port:
              number: 80
